testsuite/tests/parser/should_fail/pfail045.alan
hello() : proc
{
  if(true == true)
    return;
}
