testsuite/tests/parser/should_fail/pfail045.stderr
pfail045.alan:3:11: Error: Parse error on input `=='
	Cannot use comparison symbols in conditions

